2.0.10:
Matthias Weigand - Mon Jul 23 21:09:20 PDT 2007
 * Added TTF_GlyphIsProvided() to check whether a glyph is in a given font

2.0.9:
Kanou Hiroki - Sat Jul 14 23:15:40 PDT 2007
 * Fixed rendering of fonts with 2 bit and 4 bit embedded graymaps
Sam Lantinga - Wed Jun 13 00:32:29 PDT 2007
 * Fixed bug in solid bold glyph rendering (thanks Roy!)
Ryan Gordon - Tue Feb 13 10:19:00 2007 UTC
 * Updated to build with the latest version of FreeType
Sam Lantinga - Mon Jun 5 16:22:51 2006 UTC
 * Fixed crash when passing NULL to TTF_CloseFont()

2.0.8:
Stepan Roh - 2005-10-02 09:46
 * Fixed line spacing by using font ascender and descender
Sam Lantinga - Sun Apr 30 01:48:40 PDT 2006
 * Added gcc-fat.sh for generating Universal binaries on Mac OS X
 * Updated libtool support to version 1.5.22

2.0.7:
Philippe Plantier - Sat, 30 Oct 2004 22:46:47 +0200
 * Fixed memory corruption problems with some italic fonts
Sam Lantinga - Wed Nov 19 00:23:44 PST 2003
 * Updated libtool support for new mingw32 DLL build process
Sam Lantinga - Sun Sep  7 20:58:38 PDT 2003
 * Fixed glyph metrics for bold style fonts
Bursig Rafal - Wed Aug  6 15:02:59 PDT 2003
 * Fixed compilation with newer versions of FreeType
Kyle Davenport - Sat, 19 Apr 2003 17:13:31 -0500
 * Added .la files to the development RPM, fixing RPM build on RedHat 8
Bryan Kadzban - Mon, 24 Mar 2003 21:31:48 -0500
 * Fixed crash when opening a font file that doesn't exist

2.0.6:
Sam Lantinga - Mon Feb 10 05:44:26 PST 2003
 * Fixed UNICODE endian issues, added TTF_ByteSwappedUNICODE()
Jason Dorje Short - Thu, 30 Jan 2003 18:47:01 -0500
 * Added iconv() support to showfont to test UNICODE endian issues
Sam Lantinga - Sun Dec  1 18:34:40 PST 2002
 * Fixed memory corruption problem with small point sizes
Wesley Leong - Mon, 18 Nov 2002 11:30:15 -0800
 * Added initial .fon support to SDL_ttf
 * Fixed wrapping bug with negative horizontal bearing
 * Fixed TTF_RenderGlyph_Solid() to use the bitmap instead of pixmap